--- a/src/main/resources/templates/fragment/lnb.html
+++ b/src/main/resources/templates/fragment/lnb.html
@@ -9,25 +9,25 @@
                     <a href="#" class="dep1"><span>상담 관리</span></a>
                     <ul>
                         <li>
-                            <a href="/service/inbox">
+                            <a th:href="@{/service/inbox}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-vendor" alt="아이콘">
                                 <span>상담접수관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/service/visit">
+                            <a th:href="@{/service/visit}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-user" alt="아이콘">
                                 <span>방문개통관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/service/status">
+                            <a th:href="@{/service/status}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-pw" alt="아이콘">
                                 <span>상담관리현황</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/service/marketing">
+                            <a th:href="@{/service/marketing}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-pw" alt="아이콘">
                                 <span>마케팅대상관리</span>
                             </a>
@@ -38,13 +38,13 @@
                     <a href="#none" class="dep1"><span>SKT 관리</span></a>
                     <ul>
                         <li>
-                            <a href="/carr/mntrt/skt">
+                            <a th:href="@{/carr/mntrt/skt}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>요금제등록관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/carr/deal/skt">
+                            <a th:href="@{/carr/deal/skt}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>판매정책관리</span>
                             </a>
@@ -55,13 +55,13 @@
                     <a href="#none" class="dep1"><span>KT 관리</span></a>
                     <ul>
                         <li>
-                            <a href="/carr/mntrt/kt">
+                            <a th:href="@{/carr/mntrt/kt}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>요금제등록관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/carr/deal/kt">
+                            <a th:href="@{/carr/deal/kt}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>판매정책관리</span>
                             </a>
@@ -72,13 +72,13 @@
                     <a href="#none" class="dep1"><span>LGU+ 관리</span></a>
                     <ul>
                         <li>
-                            <a href="/carr/mntrt/lgu">
+                            <a th:href="@{/carr/mntrt/lgu}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>요금제등록관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/carr/deal/lgu">
+                            <a th:href="@{/carr/deal/lgu}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>판매정책관리</span>
                             </a>
@@ -89,19 +89,19 @@
                     <a href="#" class="dep1"><span>매장 관리</span></a>
                     <ul>
                         <li>
-                            <a href="/shop/manage">
+                            <a th:href="@{/shop/manage}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-nfc" alt="아이콘">
                                 <span>매장정보관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/shop/employees">
+                            <a th:href="@{/shop/employees}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-nfc2" alt="아이콘">
                                 <span>직원관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/shop/notice">
+                            <a th:href="@{/shop/notice}">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-nfc2" alt="아이콘">
                                 <span>공지사항관리</span>
                             </a>
