--- a/src/main/resources/templates/page/main.html
+++ b/src/main/resources/templates/page/main.html
@@ -50,7 +50,7 @@
             <div class="topMenuArea">
                 <div class="naviArea">
                     <div class="topBoxHomeUtil">
-                        <div class="mainLogo"><a href="/" class="homelogo">
+                        <div class="mainLogo"><a th:href="@{/}" class="homelogo">
                             <img th:src="@{/images/cmmn/logo.png}" alt="PENTAWORKS"></a>
                         </div>
                         <div class="GNB_title">
