--- a/src/main/resources/templates/page/service-visit.html
+++ b/src/main/resources/templates/page/service-visit.html
@@ -30,7 +30,7 @@
 
                 <div class="subHeader">
                     <div id="foldUnfold"><a href="#" class="btnFold"><span>좌측메뉴 접기/펴기</span></a></div>
-                    <h2 class="h2"><img src="../images/cmmn/hidden.png" class="ico-vendor" alt="아이콘">방문개통관리</h2>
+                    <h2 class="h2"><img th:src="@{/images/cmmn/hidden.png}" class="ico-vendor" alt="아이콘">방문개통관리</h2>
                     <div class="pageLocation">
                         <span>상담 관리</span>&gt;<strong>방문개통관리</strong>
                     </div>
