--- a/src/main/resources/templates/page/join-agree.html
+++ b/src/main/resources/templates/page/join-agree.html
@@ -77,7 +77,7 @@
         <div class="header">
             <div class="fixedWidth">
                 <h1 class="logo">
-                    <a href="/"><img th:src="@{/images/cmmn/logo.png}" alt="PentaWorks" style="height: 30px;" /></a>
+                    <a th:href="@{/}"><img th:src="@{/images/cmmn/logo.png}" alt="PentaWorks" style="height: 30px;" /></a>
                 </h1>
             </div>
         </div>
@@ -242,9 +242,6 @@
 
 <div layout:fragment="script">
     <script type="text/javascript">
-        var g_cxt = '/'
-        g_cxt = g_cxt.substring(0, g_cxt.length-1);
-
         $(function () {
             if ($(".layerWrapper").length) {
                 $('#popLayerViewTOC').popup();
