--- a/src/main/resources/templates/page/login.html
+++ b/src/main/resources/templates/page/login.html
@@ -126,7 +126,7 @@
                 <fieldset>
                     <legend>로그인</legend>
                     <div class="formWrapper">
-                        <form action="/loginProc" name="loginPostForm" method="post" autocomplete="off">
+                        <form th:action="@{/loginProc}" name="loginPostForm" method="post" autocomplete="off">
                             <p class="txtID">
                                 <label for="userId">아이디</label>
                                 <input type="text" id="userId" name="userId" placeholder="ID(이메일)">
@@ -141,7 +141,7 @@
                 </fieldset>
                 <div style="height: 10px;"></div>
                 <div class="etcLink">
-                    <a href="/join">회원가입</a>
+                    <a th:href="@{/join}">회원가입</a>
                     <a href="#popLayerIDPW" class="linkIdpw popLayerIDPW_open">비밀번호 찾기</a>
                 </div>
             </div>
@@ -266,9 +266,6 @@
 
 <div layout:fragment="script">
     <script type="text/javascript">
-        var g_cxt = '/'
-        g_cxt = g_cxt.substring(0, g_cxt.length-1);
-
         // 로그인 실패 시 안내
         var loginStat = '[[${loginStat}]]'
         if (loginStat === 'FAIL') {
