--- a/src/main/resources/templates/page/service-status.html
+++ b/src/main/resources/templates/page/service-status.html
@@ -24,7 +24,7 @@
 
                 <div class="subHeader">
                     <div id="foldUnfold"><a href="#" class="btnFold"><span>좌측메뉴 접기/펴기</span></a></div>
-                    <h2 class="h2"><img src="../images/cmmn/hidden.png" class="ico-vendor" alt="아이콘">상담관리현황</h2>
+                    <h2 class="h2"><img th:src="@{/images/cmmn/hidden.png}" class="ico-vendor" alt="아이콘">상담관리현황</h2>
                     <div class="pageLocation">
                         <span>상담 관리</span>&gt;<strong>상담관리현황</strong>
                     </div>
