--- a/src/main/resources/templates/page/service-status.html
+++ b/src/main/resources/templates/page/service-status.html
@@ -653,6 +653,7 @@
                             case "T":
                                 data.counselList[i].callStNm = '개통완료'
                                 break
+                            case "C":
                             case "E":
                                 data.counselList[i].callStNm = '미개통'
                                 break
